# poker-card-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
configs/: config.yaml
configs/data/: roboflow.yaml
configs/mlflow/: local.yaml
configs/model/: yolo11s.yaml
configs/serving/: triton.yaml
configs/training/: default.yaml
data/: raw.dvc
poker_card_detection/: commands.py
poker_card_detection/data/: dataset.py  download.py
poker_card_detection/inference/: poker_hand.py  predict.py
poker_card_detection/models/: yolo_lightning.py
poker_card_detection/serving/: api.py  triton_client.py  triton_setup.py  ui.py
poker_card_detection/training/: train.py
